apps/api/.turbo/turbo-lint.log

> @timely/api@0.0.1 lint
> eslint "{src,apps,libs,test}/**/*.ts"

[1G[0K(node:21540) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)

Oops! Something went wrong! :(

ESLint: 8.57.1

/Users/charlesmorgan/Documents/Timely/apps/api/eslint.config.js:1
import js from '@eslint/js'
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at internalCompileFunction (node:internal/vm:76:18)
    at wrapSafe (node:internal/modules/cjs/loader:1283:20)
    at Module._compile (node:internal/modules/cjs/loader:1328:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:203:29)
    at ModuleJob.run (node:internal/modules/esm/module_job:195:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async importModuleDynamicallyWrapper (node:internal/vm/module:432:15)
[1G[0K⠙[1G[0K[1mnpm[22m [31merror[39m Lifecycle script `lint` failed with error:
[1G[0K⠙[1G[0K[1mnpm[22m [31merror[39m [94mcode[39m [33m2[39m
[1G[0K⠙[1G[0K[1mnpm[22m [31merror[39m [94mpath[39m /Users/charlesmorgan/Documents/Timely/apps/api
[1G[0K⠙[1G[0K[1mnpm[22m [31merror[39m [94mworkspace[39m @timely/api@0.0.1
[1G[0K⠙[1G[0K[1mnpm[22m [31merror[39m [94mlocation[39m /Users/charlesmorgan/Documents/Timely/apps/api
[1G[0K⠙[1G[0K[1mnpm[22m [31merror[39m command failed
[1G[0K⠙[1G[0K[1mnpm[22m [31merror[39m [94mcommand[39m sh -c eslint "{src,apps,libs,test}/**/*.ts"
[1G[0K⠙[1G[0K
